--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -39,7 +39,7 @@ class @(Model.Name)Configuration(Configuration):
 @foreach(var property in Model.Properties)
 {
 @:    @ParameterWrapComment(string.Empty, ServiceClientTemplateModel.GetPropertyDocumentationString(property))
-@:    @ParameterWrapComment(string.Empty, ":type " + property.Name + ": " + MethodTemplateModel.GetDocumentationType(property.Type, property.IsRequired))
+@:    @ParameterWrapComment(string.Empty, ":type " + property.Name + ": " + MethodTemplateModel.GetDocumentationType(property.Type))
 }
     :param str base_url: Service URL
     :param str filepath: Existing config
