Change the property name to make it more reasonable.

--- a/AutoRest/Generators/Python/Python/Templates/CredentialTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/CredentialTemplate.cshtml
@@ -11,7 +11,7 @@ from msrest.authentication import (
     BasicAuthentication,
     BasicTokenAuthentication,
     OAuthTokenAuthentication)
-@if (Model.SupportsAzure)
+@if (Model.NeedsExtraImport)
 {
 @EmptyLine
 <text>
