--- a/AutoRest/Generators/Python/Python/Templates/ExceptionTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ExceptionTemplate.cshtml
@@ -16,7 +16,7 @@ from msrest.exceptions import (
     AuthenticationError,
     HttpOperationError,
 )
-@if (Model.SupportsAzure)
+@if (Model.NeedsExtraImport)
 {
 @EmptyLine
 <text>
