--- a/AutoRest/Generators/Java/Java/Templates/MethodGroupInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/MethodGroupInterfaceTemplate.cshtml
@@ -68,7 +68,7 @@ public interface @Model.MethodGroupType {
     {
     @: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
     }
-    @: * @@param serviceCallback the async ServiceCallback to handle successful and failed responses.
+    @:@method.CallbackDocumentation
     @: * @@return the {@@link ServiceCall} object
     @: */
     @:ServiceCall @(method.Name)Async(@method.MethodParameterDeclarationWithCallback);
