--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
@@ -3,6 +3,7 @@
 @using Microsoft.Rest.Generator.Java.Azure.Templates
 @using Microsoft.Rest.Generator.Utilities
 @using Microsoft.Rest.Generator.Java.TemplateModels
+@using Microsoft.Rest.Generator.Java.Templates
 @using System.Linq
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Java.Azure.AzureServiceClientTemplateModel>
 /**
@@ -89,55 +90,9 @@ if(!property.IsReadOnly)
 @if (Model.MethodTemplateModels.Any())
 {
 <text>
-    @foreach (AzureMethodTemplateModel method in Model.MethodTemplateModels)
+    @foreach (var method in Model.MethodTemplateModels)
     {
-    @:/**
-    if (!String.IsNullOrEmpty(method.Summary))
-    {
-    @: * @method.Summary.EscapeXmlComment().Period()
-    }
-    if (!String.IsNullOrEmpty(method.Description))
-    {
-    @: * @method.Description.EscapeXmlComment().Period()
-    }
-    @: *
-    foreach (var param in method.LocalParameters)
-    {
-    @: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
-    }
-    foreach (var exception in method.ExceptionStatements)
-    {
-    @: * @@throws @exception
-    }
-    if (method.ReturnType.Body != null)
-    {
-    @: * @@return the @method.ReturnTypeString.EscapeXmlComment() object wrapped in @method.OperationResponseType if successful.
-    }
-    else
-    {
-    @: * @@return the @method.OperationResponseType object if successful.
-    }
-    @: */
-    @:@method.OperationResponseReturnTypeString @(method.Name)(@method.MethodParameterDeclaration) throws @method.ExceptionString;
-    @EmptyLine
-    @:/**
-    if (!String.IsNullOrEmpty(method.Summary))
-    {
-    @: * @method.Summary.EscapeXmlComment().Period()
-    }
-    if (!String.IsNullOrEmpty(method.Description))
-    {
-    @: * @method.Description.EscapeXmlComment().Period()
-    }
-    @: *
-    foreach (var param in method.LocalParameters)
-    {
-    @: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
-    }
-    @: * @@param serviceCallback the async ServiceCallback to handle successful and failed responses.
-    @: * @@return the {@@link ServiceCall} object
-    @: */
-    @:ServiceCall @(method.Name)Async(@method.MethodParameterDeclarationWithCallback);
+    @:@Include(new MethodInterfaceTemplate(), method)
     @EmptyLine
     }
 </text>
