--- a/AutoRest/Generators/Java/Java/Templates/MethodInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/MethodInterfaceTemplate.cshtml
@@ -31,68 +31,7 @@ else
 @: * @@return the {@@link @Model.OperationResponseType} object if successful.
 }
  */
-public @Model.OperationResponseReturnTypeString @(Model.Name)(@Model.MethodParameterDeclaration) throws @Model.ExceptionString {
-@foreach (var param in Model.RequiredNullableParameters)
-{
-@:    if (@param.Name == null) {
-@:        throw new IllegalArgumentException("Parameter @param.Name is required and cannot be null.");
-@:    }
-}
-@foreach (var param in Model.ParametersToValidate)
-{
-@:    Validator.validate(@(param.Name));
-}
-@foreach (var group in Model.InputParameterTransformation.Select(t => t.ParameterMappings[0].InputParameter).Distinct())
-{
-    var inParam = group.Name;
-if (!group.IsRequired)
-{
-foreach (var outProp in Model.InputParameterTransformation.Where(t => t.ParameterMappings[0].InputParameter == group).Select(t => t.OutputParameter))
-{
-if (outProp.IsRequired && JavaCodeNamer.JavaBuiltInTypes.Contains(outProp.Type.Name))
-{
-@:    @outProp.Type.Name @outProp.Name;
-}
-else
-{
-@:    @JavaCodeNamer.WrapPrimitiveType(outProp.Type).Name @outProp.Name = null;
-}
-}
-@:    if (@(group.Name) != null) {
-    foreach (var transformation in Model.InputParameterTransformation.Where(t => t.ParameterMappings[0].InputParameter.Name == inParam))
-    {
-        var outProp = transformation.OutputParameter.Name;
-        var inProp = transformation.ParameterMappings[0].InputParameterProperty;
-@:        @outProp = @(inParam).get@(inProp.ToPascalCase())();
-    }
-@:    }
-}
-else
-{
-foreach (var transformation in Model.InputParameterTransformation.Where(t => t.ParameterMappings[0].InputParameter.Name == inParam))
-{
-    var outType = transformation.OutputParameter.Type.Name;
-    if (!transformation.OutputParameter.IsRequired)
-    {
-        outType = JavaCodeNamer.WrapPrimitiveType(transformation.OutputParameter.Type).Name;
-    }
-    var outProp = transformation.OutputParameter.Name;
-    var inProp = transformation.ParameterMappings[0].InputParameterProperty;
-@:    @outType @outProp = @(inParam).get@(inProp.ToPascalCase())();
-}
-}
-}
-@if (Model.ServiceClient.Extensions.ContainsKey(Microsoft.Rest.Generator.Extensions.ParameterizedHostExtension))
-{
-foreach (var param in Model.Parameters.Where(p => p.Extensions.ContainsKey("hostParameter")))
-{
-@:    @(Model.ClientReference).getBaseUrl().set("{@(param.SerializedName)}", @param.Name);
-}
-}
-    Call<@Model.CallType> call = service.@(Model.Name)(@Model.MethodParameterApiInvocation);
-    @Model.ResponseGeneration
-    return @Model.ReturnValue;
-}
+@Model.OperationResponseReturnTypeString @(Model.Name)(@Model.MethodParameterDeclaration) throws @Model.ExceptionString;
 @EmptyLine
 /**
 @if (!string.IsNullOrEmpty(Model.Summary))
@@ -108,113 +47,7 @@ foreach (var param in Model.Parameters.Where(p => p.Extensions.ContainsKey("host
 {
 @: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
 }
- * @@param serviceCallback the async ServiceCallback to handle successful and failed responses.
- * @@return the {@@link Call} object
+@Model.CallbackDocumentation
+ * @@return the {@@link ServiceCall} object
  */
-public Call<@Model.CallType> @(Model.Name)Async(@Model.MethodParameterDeclarationWithCallback) {
-@foreach (var param in Model.RequiredNullableParameters)
-{
-@:    if (@param.Name == null) {
-@:        serviceCallback.failure(new IllegalArgumentException("Parameter @param.Name is required and cannot be null."));
-@:        return null;
-@:    }
-}
-@foreach (var param in Model.ParametersToValidate)
-{
-@:    Validator.validate(@(param.Name), serviceCallback);
-}
-@foreach (var group in Model.InputParameterTransformation.Select(t => t.ParameterMappings[0].InputParameter).Distinct())
-{
-    var inParam = group.Name;
-if (!group.IsRequired)
-{
-foreach (var outProp in Model.InputParameterTransformation.Where(t => t.ParameterMappings[0].InputParameter == group).Select(t => t.OutputParameter))
-{
-if (outProp.IsRequired && JavaCodeNamer.JavaBuiltInTypes.Contains(outProp.Type.Name))
-{
-@:    @outProp.Type.Name @outProp.Name;
-}
-else
-{
-@:    @JavaCodeNamer.WrapPrimitiveType(outProp.Type).Name @outProp.Name = null;
-}
-}
-@:    if (@(group.Name) != null) {
-    foreach (var transformation in Model.InputParameterTransformation.Where(t => t.ParameterMappings[0].InputParameter.Name == inParam))
-    {
-        var outProp = transformation.OutputParameter.Name;
-        var inProp = transformation.ParameterMappings[0].InputParameterProperty;
-@:        @outProp = @(inParam).get@(inProp.ToPascalCase())();
-    }
-@:    }
-}
-else
-{
-foreach (var transformation in Model.InputParameterTransformation.Where(t => t.ParameterMappings[0].InputParameter.Name == inParam))
-{
-    var outType = transformation.OutputParameter.Type.Name;
-    if (!transformation.OutputParameter.IsRequired)
-    {
-        outType = JavaCodeNamer.WrapPrimitiveType(transformation.OutputParameter.Type).Name;
-    }
-    var outProp = transformation.OutputParameter.Name;
-    var inProp = transformation.ParameterMappings[0].InputParameterProperty;
-@:    @outType @outProp = @(inParam).get@(inProp.ToPascalCase())();
-}
-}
-}
-@if (Model.ServiceClient.Extensions.ContainsKey(Microsoft.Rest.Generator.Extensions.ParameterizedHostExtension))
-{
-foreach (var param in Model.Parameters.Where(p => p.Extensions.ContainsKey("hostParameter")))
-{
-@:    @(Model.ClientReference).getBaseUrl().set("{@(param.SerializedName)}", @param.Name);
-}
-}
-    Call<@Model.CallType> call = service.@(Model.Name)(@Model.MethodParameterApiInvocation);
-    call.enqueue(new @Model.InternalCallback<@(JavaCodeNamer.WrapPrimitiveType(Model.ReturnType.Body).Name)>(serviceCallback) {
-        @@Override
-        public void onResponse(Call<@Model.CallType> call, Response<@Model.CallType> response) {
-            try {
-                @Model.SuccessCallback
-            } catch (@Model.OperationExceptionTypeString | IOException exception) {
-                serviceCallback.failure(exception);
-            }
-        }
-    });
-    return call;
-}
-@EmptyLine
-private @Model.DelegateOperationResponseReturnTypeString @(Model.Name)Delegate(Response<@Model.CallType> response) throws @Model.ExceptionString {
-    return new @Model.ResponseBuilder<@Model.DelegateReturnTypeString, @Model.OperationExceptionTypeString>()
-@foreach (var response in Model.Responses)
-{
-
-            @:.register(@((int)response.Key), new TypeToken<@Model.TypeTokenType(response.Value.Body)>() { }.getType())
-}
-@if (Model.DefaultResponse.Body != null)
-{
-            @:.registerError(@(Model.OperationExceptionTypeString).class)
-}
-@if (Model.HttpMethod == HttpMethod.Head)
-{
-    if (Model.ReturnType.Headers != null)
-    {
-            @:.buildEmptyWithHeaders(response, @(Model.ReturnType.Headers.Name).class);
-    }
-    else
-    {
-            @:.buildEmpty(response);
-    }
-}
-else
-{
-    if (Model.ReturnType.Headers != null)
-    {
-            @:.buildWithHeaders(response, @(Model.ReturnType.Headers.Name).class);
-    }
-    else
-    {
-            @:.build(response);
-    }
-}
-}
+ServiceCall @(Model.Name)Async(@Model.MethodParameterDeclarationWithCallback);
