--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -12,6 +12,7 @@
 @EmptyLine
 from msrest.service_client import ServiceClient
 from msrest import Configuration, Serializer, Deserializer
+from .version import VERSION
 @if (Model.MethodTemplateModels.Any())
 {
 <text>
@@ -54,7 +55,7 @@ class @(Model.Name)Configuration(Configuration):
 @EmptyLine
         super(@(Model.Name)Configuration, self).__init__(base_url, filepath)
 @EmptyLine
-        self.add_user_agent('@Model.UserAgent')
+        self.add_user_agent('@Model.UserAgent/{}'.format(VERSION))
 @if (Model.Properties.Any())
 {
 @EmptyLine
