Move flattening deserializer to generic runtime

--- a/AutoRest/Generators/Java/Java/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ModelTemplate.cshtml
@@ -38,6 +38,10 @@ var type = types[i];
 @:})
 }
 }
+@if (Model.NeedsFlatten)
+{
+@:@@JsonFlatten
+}
 public class @(Model.Name)@(Model.BaseModelType != null ? " extends " + Model.BaseModelType.Name : "") {
 @foreach (var property in Model.Properties)
 {
