Fixed missing Error import statement

--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -19,6 +19,10 @@ from .version import VERSION
 from msrest.pipeline import ClientRawResponse
 </text>
 }
+@if (Model.HasAnyDefaultExceptions)
+{
+@:from msrest.exceptions import HttpOperationError
+}
 @if (Model.MethodGroupModels.Any())
 {
   foreach (var modelGroupType in Model.MethodGroupModels)
