--- a/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
@@ -66,7 +66,6 @@ else
     @:_required = [@requiredStr]
 }
 @{
-    var propertyList = new List<Property>(Model.Properties);
     var mapAttrList = new List<Property>(Model.ComposedProperties);
     if (!Model.IsParameterGroup)
     {
@@ -97,12 +96,15 @@ else
 {
         @:super(@(Model.Name), self).__init__(@(Model.SuperParameterDeclaration()))
 }
-@if (propertyList.Count > 0)
-{
-  for (int i = 0; i < propertyList.Count; i++)
-  {
-        @:@(Model.InitializeProperty("self", propertyList[i]))
-  }
+@{
+	var propertyList = new List<Property>(Model.Properties);
+	if (propertyList.Count > 0)
+	{
+	  for (int i = 0; i < propertyList.Count; i++)
+	  {
+			@:@(Model.InitializeProperty("self", propertyList[i]))
+	  }
+	}
 }
 
 @if (Model.NeedsPolymorphicConverter)
