--- a/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
@@ -45,25 +45,23 @@ else
 @if (Model.ComposedProperties.Any())
 {
 @EmptyLine
-  @foreach (var property in Model.ComposedProperties)
+  foreach (var property in Model.ComposedProperties)
   {
 @:    @ParameterWrapComment(string.Empty, ModelTemplateModel.GetPropertyDocumentationString(property))
   }
 }
-    """
-@{
-  var requiredFieldList = Model.RequiredFieldsList;
-  var requiredStr = String.Empty;
-  if (requiredFieldList.Count > 0)
-  {
-    for (int i = 0; i < requiredFieldList.Count; i++) 
+    """ 
+@if (Model.Validators.Any() || Model.RequiredFieldsList.Any())
+{
+<text>
+    @EmptyLine
+    _validation = {
+    @foreach (var validator in Model.Validators)
     {
-      requiredFieldList[i] = "'" + requiredFieldList[i] + "'";
+    @:@(validator)
     }
-    requiredStr = string.Join(", ", requiredFieldList);
-  }
-@EmptyLine
-    @:_required = [@requiredStr]
+    }
+</text>
 }
 @{
     var mapAttrList = new List<Property>(Model.ComposedProperties);
