--- a/AutoRest/Generators/Java/Java/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/MethodTemplate.cshtml
@@ -4,6 +4,143 @@
 @using Microsoft.Rest.Generator.Java.TemplateModels
 @using Microsoft.Rest.Generator.Utilities
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Java.MethodTemplateModel>
+@if (Model.LocalParameters.Any(p => !p.IsConstant && !p.IsRequired))
+{
+<text>
+/**
+@if (!string.IsNullOrEmpty(Model.Summary))
+{
+@: * @Model.Summary.EscapeXmlComment().Period()
+}
+@if (!string.IsNullOrEmpty(Model.Description))
+{
+@: * @Model.Description.EscapeXmlComment().Period()
+}
+ *
+@foreach (var param in Model.LocalParameters.Where(p => !p.IsConstant && p.IsRequired))
+{
+@: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
+}
+@foreach (var exception in Model.ExceptionStatements)
+{
+@: * @@throws @exception
+}
+@if (Model.ReturnType.Body != null)
+{
+@: * @@return the @Model.ReturnTypeString.EscapeXmlComment() object wrapped in {@@link @Model.OperationResponseType} if successful.
+}
+else
+{
+@: * @@return the {@@link @Model.OperationResponseType} object if successful.
+}
+ */
+public @Model.OperationResponseReturnTypeString @(Model.Name)(@Model.MethodRequiredParameterDeclaration) throws @Model.ExceptionString {
+@foreach (var param in Model.RequiredNullableParameters)
+{
+@:    if (@param.Name == null) {
+@:        throw new IllegalArgumentException("Parameter @param.Name is required and cannot be null.");
+@:    }
+}
+@foreach (var param in Model.ParametersToValidate.Where(p => p.IsRequired))
+{
+@:    Validator.validate(@(param.Name));
+}
+@foreach (ParameterTemplateModel parameter in Model.LocalParameters)
+{
+    if (!parameter.IsRequired)
+    {
+@:    final @(parameter.Type.Name) @(parameter.Name) = null;
+    }
+    if (parameter.IsConstant)
+    {
+@:    final @(parameter.Type.Name) @(parameter.Name) = @(parameter.DefaultValue);
+    }
+}
+    @Model.BuildInputMappings()
+
+@if (Model.ServiceClient.Extensions.ContainsKey(Microsoft.Rest.Generator.Extensions.ParameterizedHostExtension))
+{
+foreach (var param in Model.Parameters.Where(p => p.Extensions.ContainsKey("hostParameter")))
+{
+@:    @(Model.ClientReference).getBaseUrl().set("{@(param.SerializedName)}", @param.Name);
+}
+}
+    Call<@Model.CallType> call = service.@(Model.Name)(@Model.MethodParameterApiInvocation);
+    @Model.ResponseGeneration
+    return @Model.ReturnValue;
+}
+@EmptyLine
+/**
+@if (!string.IsNullOrEmpty(Model.Summary))
+{
+@: * @Model.Summary.EscapeXmlComment().Period()
+}
+@if (!string.IsNullOrEmpty(Model.Description))
+{
+@: * @Model.Description.EscapeXmlComment().Period()
+}
+ *
+@foreach (var param in Model.LocalParameters.Where(p => !p.IsConstant && p.IsRequired))
+{
+@: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
+}
+@Model.CallbackDocumentation
+ * @@throws IllegalArgumentException thrown if callback is null
+ * @@return the {@@link Call} object
+ */
+public ServiceCall @(Model.Name)Async(@Model.MethodRequiredParameterDeclarationWithCallback) throws IllegalArgumentException {
+    if (serviceCallback == null) {
+        throw new IllegalArgumentException("ServiceCallback is required for async calls.");
+    }
+@foreach (var param in Model.RequiredNullableParameters)
+{
+@:    if (@param.Name == null) {
+@:        serviceCallback.failure(new IllegalArgumentException("Parameter @param.Name is required and cannot be null."));
+@:        return null;
+@:    }
+}
+@foreach (var param in Model.ParametersToValidate.Where(p => p.IsRequired))
+{
+@:    Validator.validate(@(param.Name), serviceCallback);
+}
+
+@foreach (ParameterTemplateModel parameter in Model.LocalParameters)
+{
+    if (!parameter.IsRequired)
+    {
+@:    final @(parameter.Type.Name) @(parameter.Name) = null;
+    }
+    if (parameter.IsConstant)
+    {
+@:    final @(parameter.Type.Name) @(parameter.Name) = @(parameter.DefaultValue);
+    }
+}
+    @Model.BuildInputMappings()
+
+@if (Model.ServiceClient.Extensions.ContainsKey(Microsoft.Rest.Generator.Extensions.ParameterizedHostExtension))
+{
+foreach (var param in Model.Parameters.Where(p => p.Extensions.ContainsKey("hostParameter")))
+{
+@:    @(Model.ClientReference).getBaseUrl().set("{@(param.SerializedName)}", @param.Name);
+}
+}
+    Call<@Model.CallType> call = service.@(Model.Name)(@Model.MethodParameterApiInvocation);
+    @Model.ServiceCallConstruction
+    call.enqueue(new @Model.InternalCallback<@(JavaCodeNamer.WrapPrimitiveType(Model.ReturnType.Body).Name)>(serviceCallback) {
+        @@Override
+        public void onResponse(Call<@Model.CallType> call, Response<@Model.CallType> response) {
+            try {
+                @Model.SuccessCallback
+            } catch (@Model.OperationExceptionTypeString | IOException exception) {
+                serviceCallback.failure(exception);
+            }
+        }
+    });
+    return serviceCall;
+}
+@EmptyLine
+</text>
+}
 /**
 @if (!string.IsNullOrEmpty(Model.Summary))
 {
