--- a/AutoRest/Generators/Java/Java/Templates/MethodInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/MethodInterfaceTemplate.cshtml
@@ -4,6 +4,59 @@
 @using Microsoft.Rest.Generator.Java.TemplateModels
 @using Microsoft.Rest.Generator.Utilities
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Java.MethodTemplateModel>
+@if (Model.LocalParameters.Any(p => !p.IsConstant && !p.IsRequired))
+{
+<text>
+/**
+@if (!string.IsNullOrEmpty(Model.Summary))
+{
+@: * @Model.Summary.EscapeXmlComment().Period()
+}
+@if (!string.IsNullOrEmpty(Model.Description))
+{
+@: * @Model.Description.EscapeXmlComment().Period()
+}
+ *
+@foreach (var param in Model.LocalParameters.Where(p => !p.IsConstant && p.IsRequired))
+{
+@: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
+}
+@foreach (var exception in Model.ExceptionStatements)
+{
+@: * @@throws @exception
+}
+@if (Model.ReturnType.Body != null)
+{
+@: * @@return the @Model.ReturnTypeString.EscapeXmlComment() object wrapped in {@@link @Model.OperationResponseType} if successful.
+}
+else
+{
+@: * @@return the {@@link @Model.OperationResponseType} object if successful.
+}
+ */
+@Model.OperationResponseReturnTypeString @(Model.Name)(@Model.MethodRequiredParameterDeclaration) throws @Model.ExceptionString;
+@EmptyLine
+/**
+@if (!string.IsNullOrEmpty(Model.Summary))
+{
+@: * @Model.Summary.EscapeXmlComment().Period()
+}
+@if (!string.IsNullOrEmpty(Model.Description))
+{
+@: * @Model.Description.EscapeXmlComment().Period()
+}
+ *
+@foreach (var param in Model.LocalParameters.Where(p => !p.IsConstant && p.IsRequired))
+{
+@: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
+}
+@Model.CallbackDocumentation
+ * @@throws IllegalArgumentException thrown if callback is null
+ * @@return the {@@link ServiceCall} object
+ */
+ServiceCall @(Model.Name)Async(@Model.MethodRequiredParameterDeclarationWithCallback) throws IllegalArgumentException;
+</text>
+}
 /**
 @if (!string.IsNullOrEmpty(Model.Summary))
 {
