--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodStreamPipelineTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodStreamPipelineTemplate.cshtml
@@ -15,8 +15,32 @@ return client.pipeline(httpRequest, function (err, response) {
   if (@(Model.FailureStatusCodePredicate)) {
     var error = new Error(util.format('Unexpected status code: %s', statusCode));
     error.statusCode = response.statusCode;
-    error.request = httpRequest;
-    error.response = response;
+    error.request = msRest.stripRequest(httpRequest);
+    error.response = msRest.stripResponse(response);
+    if (responseBody === '') responseBody = null;
+    var parsedErrorResponse;
+    try {
+      parsedErrorResponse = JSON.parse(responseBody);
+      if (parsedErrorResponse) {
+        if (parsedErrorResponse.error) parsedErrorResponse = parsedErrorResponse.error;
+        if (parsedErrorResponse.code) error.code = parsedErrorResponse.code;
+        if (parsedErrorResponse.message) error.message = parsedErrorResponse.message;
+      }
+  @if (Model.DefaultResponse.Body != null)
+  {
+      var deserializeErrorBody = Model.GetDeserializationString(Model.DefaultResponse.Body, "error.body", "parsedErrorResponse");
+      if (!string.IsNullOrWhiteSpace(deserializeErrorBody))
+      {
+@:      if (parsedErrorResponse !== null && parsedErrorResponse !== undefined) {
+@:        @(deserializeErrorBody)
+@:      }
+      }
+  }
+    } catch (defaultError) {
+      error.message = util.format('Error "%s" occurred in deserializing the responseBody ' + 
+                       '- "%s" for the default response.', defaultError.message, responseBody);
+      return callback(error);
+    }
     return callback(error);
   }
 @EmptyLine
