--- a/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
@@ -15,7 +15,7 @@
   @WrapComment("# ", Model.Description)@:
 @:#
 }
-@foreach (var parameter in Model.LocalParameters)
+@foreach (var parameter in Model.LocalParameters.Where(p => !p.IsConstant))
 {
 @:@WrapComment("# ", string.Format("@param {0} {1}{2}", parameter.Name, parameter.Type.GetYardDocumentation(), parameter.Documentation))
 }
