--- a/AutoRest/Generators/Java/Java/Templates/MethodGroupRetrofitTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/MethodGroupRetrofitTemplate.cshtml
@@ -11,7 +11,7 @@
 interface @Model.MethodGroupServiceType {
 @foreach (var method in Model.MethodTemplateModels)
 {
-if (method.RequestContentType == "multipart/form-data")
+if (method.RequestContentType == "multipart/form-data" || method.RequestContentType == "application/x-www-form-urlencoded")
 {
 @:    @@Multipart
 }
