--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientRetrofitTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientRetrofitTemplate.cshtml
@@ -11,7 +11,14 @@
 interface @Model.ServiceClientServiceType {
 @foreach (var method in Model.MethodTemplateModels)
 {
+if (method.RequestContentType == "multipart/form-data" || method.RequestContentType == "application/x-www-form-urlencoded")
+{
+@:    @@Multipart
+}
+else
+{
 @:    @@Headers("Content-Type: @method.RequestContentType")
+}
 if (method.HttpMethod == Microsoft.Rest.Generator.ClientModel.HttpMethod.Delete)
 {
 @:    @@HTTP(path = "@(method.Url.TrimStart('/'))", method = "DELETE", hasBody = true)
