--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodTemplate.cshtml
@@ -14,7 +14,7 @@
 }
 else
 {
-@if (Model.LocalParameters.Any(p => !p.IsConstant && !p.IsRequired))
+if (Model.LocalParameters.Any(p => !p.IsConstant && !p.IsRequired))
 {
 <text>
 /**
