Fix out of memory exception streaming large streams
  - Added tests in C#, Java, Python, and NodeJS to test support for streaming
    large streams.
  - Fixed the bug in C# that caused an out of memory exception when a large
    stream was streamed.
  - Regenerate the expected test files.

--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -221,7 +221,14 @@ else
     }
 
     cancellationToken.ThrowIfCancellationRequested();
-    _httpResponse = await @(Model.ClientReference).HttpClient.SendAsync(_httpRequest, cancellationToken).ConfigureAwait(false);
+    @if (!Model.ReturnType.Body.IsPrimaryType(KnownPrimaryType.Stream))
+    {
+    @:_httpResponse = await @(Model.ClientReference).HttpClient.SendAsync(_httpRequest, cancellationToken).ConfigureAwait(false);
+    }
+    else
+    {
+    @:_httpResponse = await @(Model.ClientReference).HttpClient.SendAsync(_httpRequest, HttpCompletionOption.ResponseHeadersRead, cancellationToken).ConfigureAwait(false);
+    }
     if (_shouldTrace)
     {
         ServiceClientTracing.ReceiveResponse(_invocationId, _httpResponse);
